--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 
 <body> 
 	<!-- Оверлей загрузки, который показывается при загрузке WASM -->
-	<div id="loading">
-		<div id="spinner"></div> 
+	<div id="loading" class="loading">
+		<div class="spinner"></div> 
 		<div>Загрузка WebAssembly...</div> 
 	</div>
 
-	<div id="errorLoading">Ошибка загрузки WebAssembly. Проверьте консоль для деталей.</div>
+	<div id="errorLoading" class="errorLoading">Ошибка загрузки WebAssembly. Проверьте консоль для деталей.</div>
 
-	<button onClick="run();" id="runButton" disabled>СТАРТ</button>
-
-	<canvas id="appCanvas"></canvas>
+	<canvas id="appCanvas" class="appCanvas"></canvas>
 
 	<script src="wasm_exec.js"></script>
 	<script>
-
-
 		// Проверяем, поддерживает ли браузер WebAssembly.instantiateStreaming
 		// Если нет - добавляем полифилл (замену) для этой функции
 		if (!WebAssembly.instantiateStreaming) { // polyfill
@@ -32,32 +28,28 @@
 				return await WebAssembly.instantiate(source, importObject);
 			};
 		}
-
-		// Создаем новый экземпляр Go (из wasm_exec.js)
-		const go = new Go();
-
-		// Переменные для хранения модуля и экземпляра WebAssembly
-		let mod, inst;
 		
 		const loadingElement = document.getElementById('loading');
 		const canvas = document.getElementById('appCanvas');
 
 		const ctx = canvas.getContext("2d");
-		x = 0.;
-		y = 0.;
-		globalTime = 0;
 
-		resizeCanvas();
+		// resizeCanvas();
 		
-		
+		// Создаем новый экземпляр Go (из wasm_exec.js)
+		const go = new Go();
+
 		// Загружаем и инициализируем WebAssembly модуль
 		WebAssembly.instantiateStreaming(fetch("wasm.wasm"), go.importObject).then((result) => {
-			// При успешной загрузке:
-			mod = result.module; // Сохраняем модуль
-			inst = result.instance; // Сохраняем экземпляр
+			// Сохраняем экземпляр
+			inst = result.instance; 
+			
+			// Показываем canvas 
+			canvas.style.display = 'block';
 
-			// Разблокируем кнопку Run
-			document.getElementById("runButton").disabled = false;
+			go.run(inst);
+
+			initAnimation()
 			
 			loadingElement.style.display = 'none'
 		}).catch((err) => {
@@ -68,55 +60,33 @@
 			document.getElementById('errorLoading').style.display = 'flex'
 		});
 
-
-		async function run() {
-			// Скрываем кнопку
-            runButton.style.display = 'none';
-			
-			// Показываем canvas 
-			canvas.style.display = 'block';
-
-			go.run(inst);
-
-			interval1 = setInterval(upd, 20)
-
-			initAnimation()
-		}
-
-		function upd() {
-			x++
-			y++
-		}
-
-
 		function initAnimation(time) {
-			delta = time - globalTime
-			console.info(delta)
-			globalTime = time
-
-			ctx.clearRect(0, 0, canvas.width, canvas.height);
-			ctx.fillStyle = "green";
-
-			del = delta / 1000
-
-			console.info(del)
-
-			console.info(x, y)
+			// x = time / 1000. * 50;
+			// y = time / 1000. * 50;
+			
+			// ctx.clearRect(0, 0, canvas.width, canvas.height);
+			// ctx.fillStyle = "green";
 
 
-			ctx.fillRect(x, y, 100, 100);
+			// ctx.fillRect(x, y, 100, 100);
 
-			// goDraw()
-			requestAnimationFrame(initAnimation)
+			// requestAnimationFrame(initAnimation)
 		}
 
 
-		function resizeCanvas() {
-			canvas.width = document.documentElement.clientWidth;
-			canvas.height = document.documentElement.clientHeight;
-		}
+		// function resizeCanvas() {
+		// 	canvas.width = document.documentElement.clientWidth;
+		// 	canvas.height = document.documentElement.clientHeight;
+		// }
 
-		window.addEventListener("resize", resizeCanvas)
+		// window.addEventListener("resize", resizeCanvas)
+
+		// keyup отпущена
+		// document.addEventListener('keydown', function(event) {
+		// 	if (event.key === 'e') {
+		// 		console.log('Клавиша E нажата');
+		// 	}
+		// });	
 	</script>	
 </body>
 
