--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body> <!-- загрузка wasm -->
+	<button onclick="Init()" id="startButton" class="startButton"> Старт </button>
+
 	<!-- экран который показывается при загрузке WASM -->
 	<div id="loadingScreen" class="loadingScreen">
 		<div class="spinner"></div>
