--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body> <!-- загрузка wasm -->
-	<button onclick="Init()" id="startButton" class="startButton"> Старт </button>
+	<!-- <button onclick="Init()" id="startButton" class="startButton"> Старт </button> -->
 
 	<!-- экран который показывается при загрузке WASM -->
 	<div id="loadingScreen" class="loadingScreen">
