--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="wasm_exec.js" defer></script>
 	<script src="instantiate_wasm.js" defer></script>
-	<script src="project.js" defer></script>
+	<script src="main.js" defer></script>
 </head>
 
 <body> <!-- загрузка wasm -->
-	<!-- <button onclick="Init()" id="startButton" class="startButton"> Старт </button> -->
-
 	<!-- экран который показывается при загрузке WASM -->
 	<div id="loadingScreen" class="loadingScreen">
 		<div class="spinner"></div>
